bdr.BDR.scala.code
var mess:string
while (fini == false) {
  if (estSurMessage()){
    mess = litMessage()
  }
  
  if (mess = "R") {
    droite()
    avance()
  }
  
  else if (mess = "L") {
    gauche()
    avance()
  }
  
  else if (mess = "I") {
    droite()
    droite()
	  avance()
  }
  
  else if (mess = "A") {
    avance()
  }
    
  else if (mess = "B") {
    avance()
    avance()
  }
  
  else if (mess = "C") {
    avance()
    avance()
    avance()
  }
  
  else if (mess = "Z") {
    recule()
  }
  
  else if (mess = "Y") {
    recule()
    recule()
  }
  
  else if (mess = "X") {
    recule()
    recule()
    recule()
  }
  
  else {
    fini = true
  }
}